# neural-pde-stl-strel

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-extra.txt  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
assets/heat2d_scalar/: meta.json
configs/: diffusion1d_baseline.yaml  diffusion1d_stl.yaml  heat2d_baseline.yaml  heat2d_stl_eventually.yaml  heat2d_stl_safe.yaml  neuromancer_sine_bound.yaml
docs/: CLAIMS_AND_EVIDENCE.md  DATASET_RECOMMENDATIONS.md  EXAMPLE_STATUS.md  FRAMEWORK_SURVEY.md  IMPLEMENTATION_MAP.md  INSTALL_EXTRAS.md  MANUSCRIPT_OUTLINE.md  PAPER_POSITIONING.md  PUBLICATION_NOTES.md  READING_LIST.md  REPRODUCIBILITY.md  SPECIFICATIONS.md  VERIFIED_REFERENCE_POOL.md
figs/: diffusion1d_ablations_summary.csv
results/: benchmark_training.csv  diffusion1d_abl_w0_s0.csv  diffusion1d_abl_w10_s0.csv  diffusion1d_abl_w2_s0.csv  diffusion1d_abl_w4_s0.csv  diffusion1d_abl_w6_s0.csv  diffusion1d_abl_w8_s0.csv  diffusion1d_ablation_summary.csv  diffusion1d_ablation_summary.json  diffusion1d_ablations.csv  diffusion1d_baseline.csv  diffusion1d_baseline_field.npz  diffusion1d_baseline_field.pt  diffusion1d_baseline_rtamt.json  diffusion1d_main_summary.json  diffusion1d_stl.csv  diffusion1d_stl_field.npz  diffusion1d_stl_field.pt  diffusion1d_stl_rtamt.json  env_report.json  heat2d_spatial_max.csv  heat2d_strel_monitoring.json  heat2d_threshold_analysis.csv  pytest_summary.json
scripts/: check_env.py  eval_diffusion_rtamt.py  eval_heat2d_moonlight.py  example_status.py  framework_survey.py  gen_heat2d_frames.py  generate_all_figures.py  plot_ablations.py  refresh_committed_summaries.py  run_ablations_diffusion.py  run_experiment.py  show_benchmark_snapshot.py  train_burgers_torchphysics.py  train_diffusion_stl.py  train_heat2d_strel.py  train_neuromancer_stl.py  utils_plot.py
scripts/specs/: contain_hotspot.mls
src/neural_pde_stl_strel/: __init__.py  __main__.py  _versioning.py  pde_example.py
src/neural_pde_stl_strel/models/: mlp.py  (+1 more)
tests/: conftest.py  run_tests.py  test_benchmark_snapshot.py  test_ci_workflow.py  test_cli_aliases.py  test_dependency_probes.py  test_docs_paper_support.py  test_example_status.py  test_generate_all_figures.py  test_makefile_targets.py  test_moonlight_hello.py  test_moonlight_strel.py  test_neuromancer_demo.py  test_neuromancer_hello.py  test_pde_example.py  test_pde_robustness.py  test_physicsnemo_hello.py  test_project_identity.py  test_refresh_committed_summaries.py  test_repo_hygiene.py  test_repo_path_consistency.py  test_rtamt_hello.py  test_sdist_manifest.py  test_spatial_spec_demo.py  test_spatial_spec_hello.py  test_stl_soft.py  test_stlnet_dataset.py  test_torchphysics_hello.py
(+28 files in other folders)
